# Soundhouse

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/builtin/: backend.cpp  backend.hpp  builtin.hpp  logger.cpp  logger.hpp  manager.cpp  manager.hpp  sound.cpp  sound.hpp
